--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<h1>App</h1>
 
+<div class="container">
 <a routerLink="/login">Login</a>
+<a routerLink="/register">Register</a>
+<a routerLink="/profile">Profile</a>
 <router-outlet></router-outlet>
+</div>
