--- a/src/app/views/website/website-new/website-new.component.html
+++ b/src/app/views/website/website-new/website-new.component.html
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Websits List</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link href="../css/style.css" rel="stylesheet"/>
-</head>
-<body>
 <nav class="navbar navbar-fixed-top cl-blue-navbar">
   <div class="row">
     <div class="col-xs-4 hidden-xs">
       <div class="container-fluid">
         <p class="navbar-text pull-left">
-          <a href="website-list.html" class="navbar-link cl-text-white">
+          <a href="./../website-list/website-list.component.html" class="navbar-link cl-text-white">
             <span class="glyphicon glyphicon-chevron-left"></span>
           </a>
         </p>
@@ -31,7 +21,7 @@
         <a class="cl-text-white navbar-brand cl-text-bold" href="#">
           New Websites
         </a>
-        <a href="website-list.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a href="./../website-list/website-list.component.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </div>
@@ -43,20 +33,20 @@
   <div class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless">
       <li class="list-group-item cl-list-item-borderless">
-        <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a href="../page/page-list.html">Blogging App</a>
+        <a href="./../website-edit/website-edit.component.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a href="./../../page/page-list/page-list.component.html">Blogging App</a>
       </li>
       <li class="list-group-item cl-list-item-borderless">
-        <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a href="../page/page-list.html">Address Book App</a>
+        <a href="./../website-edit/website-edit.component.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a href="./../../page/page-list/page-list.component.html">Address Book App</a>
       </li>
       <li class="list-group-item cl-list-item-borderless">
-        <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a href="../page/page-list.html">Script Testing App</a>
+        <a href="./../website-edit/website-edit.component.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a href="./../../page/page-list/page-list.component.html">Script Testing App</a>
       </li>
       <li class="list-group-item cl-list-item-borderless">
-        <a href="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a href="../page/page-list.html">Blogger</a>
+        <a href="./../website-edit/website-edit.component.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a href="./../../page/page-list/page-list.component.html">Blogger</a>
       </li>i
     </ul>
   </div>
@@ -76,10 +66,9 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a href="../user/profile.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a href="./../../user/profile/profile.component.html" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
 </nav>
-</body>
-</html>
+
