functions not complete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div class="container">
 <a routerLink="/login">Login</a>
 <a routerLink="/register">Register</a>
-<a routerLink="/profile">Profile</a>
+<a routerLink="/profile/:userId">Profile</a>
 <router-outlet></router-outlet>
 </div>
