--- a/src/app/components/widget/widget-chooser/widget-chooser.component.html
+++ b/src/app/components/widget/widget-chooser/widget-chooser.component.html
@@ -17,22 +17,22 @@
 <div class="container-fluid cl-container-padding">
   <ul class="list-group cl-list-group-borderless">
     <li class="list-group-item cl-list-item-borderless">
-      <a href="../widget-edit/widget-header/widget-header.component.html">Header</a>
+      <a routerLink="../widget-edit/widget-header/widget-header.component.html">Header</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">Label</a>
+      <a routerLink=".">Label</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">HTML</a>
+      <a routerLink=".">HTML</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">Text Input</a>
+      <a routerLink=".">Text Input</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">Link</a>
+      <a routerLink=".">Link</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">Button</a>
+      <a routerLink=".">Button</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
       <a routerLink="widget-image.html">Image</a>
@@ -41,10 +41,10 @@
       <a routerLink="widget-youtube.html">YouTube</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">Data Table</a>
+      <a routerLink=".">Data Table</a>
     </li>
     <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="#">Repeater</a>
+      <a routerLink=".">Repeater</a>
     </li>
   </ul>
 </div>
@@ -53,7 +53,7 @@
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/profile" class="cl-icon-padding">
+      <a routerLink="/profile:userId" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
