--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -23,14 +23,14 @@
   <form>
     <div class="form-group">
       <label for="page-name">Name</label>
-      <input [(ngModel)]="page-name" type="text" class="form-control" id="page-name" placeholder="Page Name">
+      <input [(ngModel)]="page-name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="page-title">Title</label>
-      <input [(ngModel)]="page-title" type="text" class="form-control" id="page-title" placeholder="Page Title">
+      <input [(ngModel)]="page-title" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
-  <a class="btn btn-danger  btn-block" routerLink="profile/:userId">Delete</a>
+  <a class="btn btn-danger  btn-block" (click)="deletePage()" routerLink="/profile/:userId">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
