--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,44 +1,34 @@
-<!--<div class="container">-->
-  <!--<div *ngIf="wrongInfoFlag"-->
-      <!--class="alert alert-success">-->
-      <!--{{erroMSG}}}-->
-  <!--</div>-->
-  <!--<h1>Register</h1>-->
-
-  <!--<form>-->
-    <!--<label for="username">Username</label>-->
-    <!--<input [(ngModel)]="user.username" id='username' type="text" class="form-control" placeholder="username" ngModel required/>-->
-
-    <!--<label for="password">Password</label>-->
-    <!--<input [(ngModel)]="user.password" id='password' type="password" class="form-control" placeholder="password" ngModel required/>-->
-
-    <!--<label for="verify password">Password</label>-->
-    <!--<input [(ngModel)]="verifyPas" id='verify password' type="password" class="form-control" placeholder="very password" ngModel required/>-->
-
-  <!--<button class="btn btn-primary btn-block"-->
-     <!--routerLink="/profile">Register</button>-->
-  <!--<button class="btn btn-danger  btn-block"-->
-     <!--routerLink="/login">Cancel</button>-->
-  <!--</form>-->
-<!--</div>-->
+<div class="container-fluid">
+  <!--<a class="cl-text-white navbar-brand cl-text-bold cl-text-padding" routerLink="/profile/{{user._id}}">-->
+    <h1>Register</h1>
+  <!--</a>-->
+</div>
 
 <div class="container">
-  <div *ngIf="infoFlag"
-  class="alert alert-success">
-  {{infoMSG}}}
+  <div *ngIf="InfoFlag" class="alert alert-success">
+  {{infoMSG}}
   </div>
-  <h1>Register</h1>
-  <input type="text"
-         class="form-control"
-         placeholder="username"/>
-  <input type="password"
-         class="form-control"
-         placeholder="password"/>
-  <input type="password"
-         class="form-control"
-         placeholder="very password"/>
-  <a class="btn btn-primary btn-block"
-     routerLink="/profile/{{user._id}}">Register</a>
-  <a class="btn btn-danger  btn-block"
-     routerLink="/login">Cancel</a>
+
+  <form (ngSubmit)="register()" #f="ngForm">
+  <div class="form-group">
+    <label for="username">Username</label>
+    <!--<input type="text" name="username" class="form-control" id="username" placeholder="username" ngModel required #username="ngModel" >-->
+    <input [(ngModel)]="user.username" type="text" name="username" class="form-control" id="username" placeholder="username" [ngModelOptions]="{standalone: true}"/>
+  </div>
+
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input [(ngModel)]="user.password" type="password" name="password" class="form-control" id="password" placeholder="password" [ngModelOptions]="{standalone: true}"/>
+  </div>
+
+  <div class="form-group">
+    <label for="verifypas">Verify Password</label>
+    <input [(ngModel)]="verifypas" type="password" name="verifypas" class="form-control" id="verifypas" placeholder="verify password" [ngModelOptions]="{standalone: true}"/>
+  </div>
+
+    <button class="btn btn-primary btn-block" routerLink="/profile/{{userId}}" (click)="register()">Register</button>
+    <button class="btn btn-danger  btn-block"
+     routerLink="/login">Cancel</button>
+</form>
+
 </div>
