--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -3,24 +3,24 @@
     <div class="col-xs-4 hidden-xs">
       <div class="container-fluid">
         <p class="navbar-text pull-left">
-          <a routerLink=" " class="navbar-link cl-text-white">
+          <a routerLink=".." class="navbar-link cl-text-white">
             <span class="glyphicon glyphicon-chevron-left"></span>
           </a >
         </p >
-        <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
           Websites
         </a >
-        <a routerLink="user/{{userId}}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="../new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-plus"></span>
         </a >
       </div>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
       <div class="container-fluid">
-        <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           Edit Websites
         </a >
-        <a routerLink="user/:userId/website" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="user/{{user._id}}/website" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a >
       </div>
@@ -31,22 +31,9 @@
 <div class="contain-fluid">
   < class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless">
-
-      <!--<li class="list-group-item cl-list-item-borderless">-->
-        <!--<a routerLink="user/:userId/website/:wid"><span class="glyphicon glyphicon-cog pull-right"></span></a >-->
-        <!--<a href="../../page/page-list/page-list.component.html">Blogging App</a >-->
-      <!--</li>-->
-      <!--<li class="list-group-item cl-list-item-borderless">-->
-        <!--<a href="../website-edit/website-edit.component.html"><span class="glyphicon glyphicon-cog pull-right"></span></a >-->
-        <!--<a href="../../page/page-list/page-list.component.html">Address Book App</a >-->
-      <!--</li>-->
-      <!--<li class="list-group-item cl-list-item-borderless">-->
-        <!--<a href="../website-edit/website-edit.component.html"><span class="glyphicon glyphicon-cog pull-right"></span></a >-->
-        <!--<a href="../../page/page-list/page-list.component.html">Script Testing App</a >-->
-      <!--</li>-->
       <li *ngFor = "let websiteList of websites" class="list-group-item cl-list-item-borderless">
-        <a routerLink="user/:userId/website/:wid"><span class="glyphicon glyphicon-cog pull-right"></span></a >
-        <a routerLink="user/:userId/website/:wid/page">Blogger</a >
+        <a routerLink="../{{websiteLi._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a >
+        <a routerLink="../{{websiteLi._id}}/page">{{websiteLi.name}}</a >
       </li>
     </ul>
 </div>>
@@ -55,20 +42,20 @@
     <form>
       <div class="form-group cl-8-top">
         <label for="website-name">Website Name</label>
-        <input [(ngModel)]="website-name" type="text" class="form-control" id="website-name" placeholder="Blogger">
+        <input [(ngModel)]="website-name" type="text" class="form-control" id="website-name" placeholder="Blogger" [ngModelOptions]="{standalone: true}">
       </div>
       <div class="form-group cl-8-top">
         <label for="website-description">Website Description</label>
-        <textarea id="website-description" class="form-control" rows="5"
-                  placeholder="Blog is a blog-publishing service."></textarea>
+        <textarea [(ngModel)]="website-description" id="website-description" class="form-control" rows="5"
+                  placeholder="Blog is a blog-publishing service." [ngModelOptions]="{standalone: true}"></textarea>
       </div>
-      <a class="btn btn-danger btn-block cl-8-top" routerLink="..">Delete</a >
+      <a class="btn btn-danger btn-block cl-8-top" routerLink="user/:userId/website">Delete</a >
     </form>
   </div>
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="profile/:userId" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/profile/:userId" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a >
   </div>
