--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,52 +1,27 @@
-<!--<p>-->
-<!--website-list works!-->
-<!--</p>-->
-
-
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-  <!--<meta charset="UTF-8">-->
-  <!--<title>Title</title>-->
-  <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>-->
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">-->
-  <!--<link href="../css/style.css" rel="stylesheet"/>-->
-<!--</head>-->
-<!--<body>-->
 <nav class="navbar navbar-fixed-top cl-blue-navbar">
   <div class="container-fluid">
     <p class="navbar-text pull-left">
-      <a routerLink="/profile/{{userId}}" class="navbar-link cl-text-white">
+      <a routerLink="profile/:userId" class="navbar-link cl-text-white">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
-    <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+    <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
       Websites
     </a>
-    <a routerLink="../website-new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="./new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-plus"></span>
     </a>
   </div>
 </nav>
 
-<div class="container">
-  <div *ngFor="let website of websites">
-    <ul class="list-group cl-list-group-borderless">
-      <!--<li class="list-group-item cl-list-item-borderless">-->
-      <!--<a routerLink='user/:userId/website'><span class="glyphicon glyphicon-cog pull-right"></span></a>-->
-      <!--<a routerLink='user/:userId/website/:wid/page'>Address Book App</a>-->
-      <!--</li>-->
-      <!--<li class="list-group-item cl-list-item-borderless">-->
-      <!--<a routerLink="./../website-edit"><span class="glyphicon glyphicon-cog pull-right"></span></a>-->
-      <!--<a routerLink="../page/page-list.html">Blogger</a>-->
-      <!--</li>-->
-      <!--<li class="list-group-item cl-list-item-borderless">-->
-      <!--<a routerLink="website-edit.html"><span class="glyphicon glyphicon-cog pull-right"></span></a>-->
-      <!--<a routerLink="../page/page-list.html">Blogging App</a>-->
-      <!--</li>-->
+
+<div class="container-fluid cl-container-padding">
+  <div class="row extra-padding">
+
+    <ul class="list-group cl-list-group-borderless" *ngFor="let website of websites">
       <li class="list-group-item cl-list-item-borderless">
-        <a routerLink="../"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a routerLink="user/{{userId}}}/website/{{website._id}}/page">{{website.name}}</a>
+      <a routerLink="./{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+      <a routerLink="/user/{{userId}}/website/{{website._id}}/page">{{website.name}}</a>
       </li>
     </ul>
   </div>
@@ -59,5 +34,3 @@
     </a>
   </div>
 </nav>
-<!--</body>-->
-<!--</html>-->
