--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -3,14 +3,14 @@
     <div class="col-xs-4 hidden-xs">
       <div class="container-fluid">
         <p class="navbar-text pull-left">
-          <a routerLink="user/:userId/website" class="navbar-link cl-text-white">
+          <a routerLink=".." class="navbar-link cl-text-white">
             <span class="glyphicon glyphicon-chevron-left"></span>
           </a>
         </p>
-        <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           Websites
         </a>
-        <a routerLink="#" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="../new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-plus"></span>
         </a>
       </div>
@@ -18,10 +18,10 @@
     <!--<div class="col-xs-8">-->
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
       <div class="container-fluid">
-        <a class="cl-text-white navbar-brand cl-text-bold" href="#">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           New Websites
         </a>
-        <a routerLink="user/:userId/website" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink=".." class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </div>
@@ -33,8 +33,8 @@
   <div class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless">
       <li *ngFor="let websiteList of websites" class="list-group-item cl-list-item-borderless">
-        <a routerLink="user/:userId/website/:wid"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a routerLink="user/:userId/website/:wid/page">{{websiteList.name}}}</a>
+        <a routerLink="../{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a routerLink="../{{website._id}}/page">{{websiteList.name}}}</a>
       </li>i
     </ul>
   </div>
@@ -42,11 +42,11 @@
     <form>
       <div class="form-group">
         <label for="website-name">Name</label>
-        <input type="text" class="form-control" id="website-name" placeholder="Name">
+        <input [(ngModel)]="name" type="text" class="form-control" id="website-name" placeholder="Name" [ngModelOptions]="{standalone: true}">
       </div>
       <div class="form-group">
         <label for="website-description">Description</label>
-        <textarea id="website-description" class="form-control" rows="5" placeholder="Description"></textarea>
+        <textarea [(ngModel)]="description" id="website-description" class="form-control" rows="5" placeholder="Description" [ngModelOptions]="{standalone: true}"></textarea>
       </div>
     </form>
   </div>
@@ -54,7 +54,7 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="profile/:userId" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/profile/:userId" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
