--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -42,7 +42,7 @@
       <input type="file" class="form-control" id="exampleInputFile">
     </div>
   </form>
-  <a class="btn btn-primary btn-block" routerLink="#">Upload Image</a>
+  <a class="btn btn-primary btn-block" routerLink=".">Upload Image</a>
   <a class="btn btn-danger  btn-block" routerLink="user/:userId/website/:wid/page/:pid/widget">Delete</a>
 </div>
 
@@ -50,7 +50,7 @@
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/profile" class="cl-icon-padding">
+      <a routerLink="/profile:userId" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
