--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -36,11 +36,11 @@
 
       <div *ngSwitchCase="'YouTube'">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe width="640" height="360" src="url[i]" frameborder="0" allowfullscreen></iframe>"
-            <a routerLink="#" class="pull-right">
+            <iframe width="640" height="360" [(src)]="urls[i]" frameborder="0" allowfullscreen></iframe>"
+            <a routerLink="." class="pull-right">
               <span class="glyphicon glyphicon-menu-hamburger" style="background-color: white"></span>
             </a>
-            <a routerLink="../widget-edit/widget-youtube/widget-youtube.component.html" class="pull-right">
+            <a routerLink="./{{widget._id}}" class="pull-right">
               <span class="glyphicon glyphicon-cog" style="background-color: white"></span>
             </a>
           </div>
@@ -48,14 +48,14 @@
 
       <div *ngSwitchCase="'Image'">
         <div>
-          <a routerLink="#" class="pull-right">
+          <a routerLink="." class="pull-right">
             <span class="glyphicon glyphicon-menu-hamburger"></span>
           </a>
-          <a routerLink="../widget-edit/widget-image/widget-image.component.html" class="pull-right">
+          <a routerLink="./{{widget._id}}" class="pull-right">
             <span class="glyphicon glyphicon-cog"></span>
           </a>
           <img class="img-responsive img-rounded cl-widget-images"
-               src="http://i2.cdn.cnn.com/cnnnext/dam/assets/170604130220-41-london-bridge-incident-0604-gallery-exlarge-169.jpg">
+               src="{{widget.url}}">
         </div>
       </div>
     </div>
@@ -104,35 +104,34 @@
 
 
 
-  <!--<div>-->
-    <!--<div class="pull-right">-->
-      <!--<a routerLink="#" class="pull-right">-->
-        <!--<span class="glyphicon glyphicon-menu-hamburger"></span>-->
-      <!--</a>-->
-      <!--<a routerLink="#">-->
-        <!--<span class="glyphicon glyphicon-cog"></span>-->
-      <!--</a>-->
-    <!--</div>-->
-    <!--<p></p>-->
-  <!--</div>-->
-
+  <div>
+    <div class="pull-right">
+      <a routerLink="." class="pull-right">
+        <span class="glyphicon glyphicon-menu-hamburger"></span>
+      </a>
+      <a routerLink=".">
+        <span class="glyphicon glyphicon-cog"></span>
+      </a>
+    </div>
+    <p></p>
+  </div>
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/profile" class="cl-icon-padding">
+      <a routerLink="/profile:userId" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
     </div>
 
     <div class="pull-left navbar-text">
-      <a routerLink="#" class="cl-icon-padding">
+      <a routerLink="." class="cl-icon-padding">
         <span class="glyphicon glyphicon-play"></span>
       </a>
-      <a routerLink="#" class="cl-icon-padding">
+      <a routerLink="." class="cl-icon-padding">
         <span class="glyphicon glyphicon-eye-open"></span>
       </a>
 
