--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid row">
     <div class="navbar-text pull-left">
-      <a routerLink="user/{{userId}}/website" class="cl-text-black cl-icon-padding">
+      <a routerLink="/user/{{uid}}/website" class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a routerLink="/new" class="cl-icon-padding cl-text-black">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/new" class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-plus">
           </span>
       </a>
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" routerLink="#">
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
       Pages
     </a>
   </div>
@@ -20,19 +20,20 @@
 
 <div class="container-fluid cl-container-padding">
   <div class="row extra-padding">
-  <ul class="list-group cl-list-group-borderless">
-    <li  *ngFor="let page of pages">
-    <a routerLink="./{{page._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-      <a routerLink="./{{page._id}}/widget">{{page.name}}}</a>
-    </li>
-  </ul>
+
+    <ul class="list-group cl-list-group-borderless" *ngFor="let page of pages">
+      <li class="list-group-item cl-list-item-borderless">
+        <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{page._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{page._id}}/widget">{{page.name}}</a>
+      </li>
+    </ul>
   </div>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-      <a routerLink="profile/{{userId}}" class="cl-icon-padding">
+      <a routerLink="/user/{{uid}}" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </div>
