--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -2,13 +2,14 @@
   <div class="container-fluid row">
 
     <div class="navbar-text pull-left">
-      <a routerLink="user/:userId/website/:wid/page" class="cl-text-black cl-icon-padding">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page" class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a routerLink="user/:userId/website/:wid/page" class="cl-icon-padding cl-text-black">
+      <!--<a (click)="createWebsite()" routerLink="/user/{{uid}}/website/{{website._id}}/page" class="cl-icon-padding cl-text-black">-->
+      <a (click)="createNewPage(newPage)" class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-ok">
           </span>
       </a>
@@ -23,11 +24,11 @@
   <form>
     <div class="form-group">
       <label for="page-name">Name</label>
-      <input type="text" class="form-control" id="page-name" placeholder="Page Name">
+      <input [(ngModel)]="newPage.name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group-pagenew">
-      <label for="page-title">Title</label>
-      <input type="text" class="form-control" id="page-title" placeholder="Page Title">
+      <label for="page-title">Description</label>
+      <input [(ngModel)]="newPage.description" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
 </div>
@@ -35,7 +36,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
-      <a routerLink="/profile" class="cl-icon-padding">
+      <a routerLink="/user/{{uid}}" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
     </div>
