--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -3,10 +3,10 @@
   <div class="container-fluid">
     <p class="navbar-text pull-left">
     </p>
-    <a class="cl-text-white navbar-brand cl-text-bold cl-text-padding" routerLink="/profile/{{user._id}}">
+    <a class="cl-text-white navbar-brand cl-text-bold cl-text-padding">
       Profile
     </a>
-    <div class="navbar-text pull-right" (click)="updateUser()">
+    <div class="navbar-text pull-right" (click)="updateUser(user)">
       <!--<a routerLink="/profile/{{user._id}}" class="cl-icon-padding2 cl-text-white">-->
           <span class="glyphicon glyphicon-ok">
           </span>
@@ -16,63 +16,48 @@
 </nav>
 
 <div class="container">
-  <div *ngIf="infoFlag" class="alert alert-success">
-    {{infoMsg}}
-  </div>
+  <!--<div *ngIf="infoFlag" class="alert alert-success">-->
+    <!--{{infoMsg}}-->
+  <!--</div>-->
   <form>
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input [(ngModel)]="user.username" type="text" class="form-control" id="username" placeholder="Username" [ngModelOptions]="{standalone: true}"/>
-    </div>
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
-    </div>
-    <div class="form-group">
-      <label for="first-name">First Name</label>
-      <input [(ngModel)]="user.firstName" type="text" class="form-control" id="first-name" placeholder="Alice" [ngModelOptions]="{standalone: true}"/>
-    </div>
-    <div class="form-group">
-      <label for="last-name">Last Name</label>
-      <input [(ngModel)]="user.lastName" type="text" class="form-control" id="last-name" placeholder="Wonderland" [ngModelOptions]="{standalone: true}"/>
-    </div>
+    <!--<div class="form-group">-->
+      <!--<label for="username">Username</label>-->
+      <!--<input [(ngModel)]="user.username" type="text" class="form-control" id="username" placeholder="Username">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="email">Email address</label>-->
+      <!--<input type="email" class="form-control" id="email" placeholder="alice@wonderland.com">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="first-name">First Name</label>-->
+      <!--<input [(ngModel)]="user.firstName" type="text" class="form-control" id="first-name" placeholder="Alice">-->
+    <!--</div>-->
+    <!--<div class="form-group">-->
+      <!--<label for="last-name">Last Name</label>-->
+      <!--<input [(ngModel)]="user.lastName" type="text" class="form-control" id="last-name" placeholder="Wonderland">-->
+    <!--</div>-->
+    <label for="username">Username</label>
+    <input [(ngModel)]="user.username" type="text" class="form-control" id="username" placeholder="username" [ngModelOptions]="{standalone: true}"/>
+
+    <label for="password">Password</label>
+    <input [(ngModel)]="user.password" type="password" class="form-control" id="password" placeholder="password" [ngModelOptions]="{standalone: true}"/>
+
+    <label for="firstname">First Name</label>
+    <input [(ngModel)]="user.firstName" type="text" class="form-control" id="firstname" placeholder="first name" [ngModelOptions]="{standalone: true}"/>
+
+    <label for="lastname">Last Name</label>
+    <input [(ngModel)]="user.lastName" type="text" class="form-control" id="lastname" placeholder="last name" [ngModelOptions]="{standalone: true}"/>
   </form>
 
   <a class="btn btn-primary btn-block"
-     routerLink="/user/{{user._id}}/website">Websites</a>
+     routerLink="/user/{{uid}}/website">Websites</a>
   <a class="btn btn-danger  btn-block"
      routerLink="/login">Logout</a>
 </div>
 
-<!--<nav class="navbar navbar-default navbar-fixed-bottom">-->
-  <!--<div class="container">-->
-    <!--<div class="row navbar-text">-->
-      <!--<div class="col-xs-3 text-center">-->
-        <!--<a routerLink=".">-->
-          <!--<span class="glyphicon glyphicon-ok"></span>-->
-        <!--</a>-->
-      <!--</div>-->
-      <!--<div class="col-xs-3 text-center">-->
-        <!--<a routerLink=".">-->
-          <!--<span class="glyphicon glyphicon-plus"></span>-->
-        <!--</a>-->
-      <!--</div>-->
-      <!--<div class="col-xs-3 text-center">-->
-        <!--<a routerLink=".">-->
-          <!--<span class="glyphicon glyphicon-star"></span>-->
-        <!--</a>-->
-      <!--</div>-->
-      <!--<div class="col-xs-3 text-center">-->
-        <!--<a routerLink=".">-->
-          <!--<span class="glyphicon glyphicon-heart"></span>-->
-        <!--</a>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/profile/{{user._id}}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user/{{uid}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
