--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -3,24 +3,24 @@
     <div class="col-xs-4 hidden-xs">
       <div class="container-fluid">
         <p class="navbar-text pull-left">
-          <a routerLink=".." class="navbar-link cl-text-white">
+          <a routerLink="/user/{{webDeveloperId}}/website/" class="navbar-link cl-text-white">
             <span class="glyphicon glyphicon-chevron-left"></span>
           </a >
         </p >
-        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="#">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           Websites
         </a >
-        <a routerLink="../new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="." class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-plus"></span>
         </a >
       </div>
     </div>
     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
       <div class="container-fluid">
-        <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
+        <a class="cl-text-white navbar-brand cl-text-bold" routerLink="/user/{{webDeveloperId}}/website/">
           Edit Websites
         </a >
-        <a routerLink="user/{{user._id}}/website" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a (click)="updateWebsite(updatedWebsite)" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a >
       </div>
@@ -29,11 +29,10 @@
 </nav>
 
 <div class="contain-fluid">
-  < class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless">
-      <li *ngFor = "let websiteList of websites" class="list-group-item cl-list-item-borderless">
-        <a routerLink="../{{websiteLi._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a >
-        <a routerLink="../{{websiteLi._id}}/page">{{websiteLi.name}}</a >
+      <li *ngFor = "let website of websites" class="list-group-item cl-list-item-borderless">
+        <a routerLink="/user/{{webDeveloperId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a >
+        <a routerLink="/user/{{webDeveloperId}}/website/{{website._id}}/page">{{website.name}}</a>
       </li>
     </ul>
 </div>>
@@ -49,13 +48,13 @@
         <textarea [(ngModel)]="website-description" id="website-description" class="form-control" rows="5"
                   placeholder="Blog is a blog-publishing service." [ngModelOptions]="{standalone: true}"></textarea>
       </div>
-      <a class="btn btn-danger btn-block cl-8-top" routerLink="user/:userId/website">Delete</a >
+      <a (click)="deleteWebsite()" class="btn btn-danger btn-block cl-8-top">Delete</a >
     </form>
   </div>
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/profile/:userId" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user/{{webDeveloperId}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a >
   </div>
