--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-fixed-top cl-blue-navbar">
   <div class="container-fluid">
     <p class="navbar-text pull-left">
-      <a routerLink="profile/:userId" class="navbar-link cl-text-white">
+      <a routerLink="/user/{{uid}}" class="navbar-link cl-text-white">
         <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
     </p>
     <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
       Websites
     </a>
-    <a routerLink="./new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user/{{uid}}/website/new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-plus"></span>
     </a>
   </div>
@@ -20,8 +20,8 @@
 
     <ul class="list-group cl-list-group-borderless" *ngFor="let website of websites">
       <li class="list-group-item cl-list-item-borderless">
-      <a routerLink="./{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-      <a routerLink="/user/{{userId}}/website/{{website._id}}/page">{{website.name}}</a>
+      <a routerLink="/user/{{uid}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+      <a routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}</a>
       </li>
     </ul>
   </div>
@@ -29,7 +29,7 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/profile/{{userId}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user/{{uid}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
