--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -3,14 +3,14 @@
     <div class="col-xs-4 hidden-xs">
       <div class="container-fluid">
         <p class="navbar-text pull-left">
-          <a routerLink=".." class="navbar-link cl-text-white">
+          <a routerLink="/user/{{uid}}/website" class="navbar-link cl-text-white">
             <span class="glyphicon glyphicon-chevron-left"></span>
           </a>
         </p>
         <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           Websites
         </a>
-        <a routerLink="../new" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a routerLink="/user/{{uid}}/website/" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-plus"></span>
         </a>
       </div>
@@ -21,7 +21,7 @@
         <a class="cl-text-white navbar-brand cl-text-bold" routerLink=".">
           New Websites
         </a>
-        <a routerLink=".." class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+        <a (click)="createWebsite(newWebsite)" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
           <span class="glyphicon glyphicon-ok"></span>
         </a>
       </div>
@@ -32,9 +32,9 @@
 <div class="contain-fluid">
   <div class="col-xs-4 hidden-xs">
     <ul class="list-group cl-list-group-borderless">
-      <li *ngFor="let websiteList of websites" class="list-group-item cl-list-item-borderless">
-        <a routerLink="../{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a routerLink="../{{website._id}}/page">{{websiteList.name}}}</a>
+      <li *ngFor="let website of websites" class="list-group-item cl-list-item-borderless">
+        <a routerLink="/user/{{uid}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
+        <a routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}}</a>
       </li>i
     </ul>
   </div>
@@ -54,7 +54,7 @@
 
 <nav class="navbar navbar-fixed-bottom cl-blue-navbar">
   <div class="container-fuild">
-    <a routerLink="/profile/:userId" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
+    <a routerLink="/user/{{uid}}" class="navbar-link navbar-text pull-right cl-text-white cl-icon-padding">
       <span class="glyphicon glyphicon-user"></span>
     </a>
   </div>
