--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -1,3 +1,66 @@
-<p>
-  widget-youtube works!
-</p>
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid row">
+
+    <div class="navbar-text pull-left">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-text-black cl-icon-padding">
+          <span class="glyphicon glyphicon-chevron-left">
+          </span>
+      </a>
+    </div>
+    <div class="navbar-text pull-right">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-icon-padding cl-text-black">
+          <span class="glyphicon glyphicon-ok">
+          </span>
+      </a>
+    </div>
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
+      Widgets Edit
+    </a>
+  </div>
+  <!--<a class="btn navbar-brand pull-right" (click)="updateWidget(widget)">-->
+    <!--<span class="glyphicon glyphicon-ok text-dark"></span>-->
+  <!--</a>-->
+</nav>
+
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="youtube-name">Name</label>
+      <input [(ngModel)]="widget._id" type="text" class="form-control" id="youtube-name" placeholder="Name" [ngModelOptions]="{standalone: true}">
+    </div>
+
+
+    <!--<div class="form-group">-->
+      <!--<label for="website-name">Name</label>-->
+      <!--<input [(ngModel)]="name" type="text" class="form-control" id="website-name" placeholder="Name" [ngModelOptions]="{standalone: true}">-->
+    <!--</div>-->
+
+    <div class="form-group">
+      <label for="youtube-text">Text</label>
+      <input [(ngModel)]="widget.text" type="text" class="form-control" id="youtube-text" placeholder="Text" [ngModelOptions]="{standalone: true}">
+    </div>
+    <div class="form-group">
+      <label for="youtube-URL">URL</label>
+      <input [(ngModel)]="widget.url" type="text" class="form-control" id="youtube-URL" placeholder="URL" [ngModelOptions]="{standalone: true}">
+    </div>
+    <div class="form-group">
+      <label for="youtube-width">Width</label>
+      <input [(ngModel)]="widget.width" type="text" class="form-control" id="youtube-width" placeholder="100%" [ngModelOptions]="{standalone: true}">
+    </div>
+  </form>
+  <a class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</a>
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid row">
+    <div class="pull-right navbar-text">
+
+      <a routerLink="/user" class="cl-icon-padding">
+        <span class="glyphicon glyphicon-user"></span>
+      </a>
+
+    </div>
+  </div>
+</nav>
+
