--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -45,7 +45,6 @@
             </a>
           </div>
       </div>
-
       <div *ngSwitchCase="'IMAGE'">
         <div>
           <a routerLink="." class="pull-right">
@@ -62,17 +61,17 @@
   </div>
 </div>
 
-  <div>
-    <div class="pull-right">
-      <a routerLink="." class="pull-right">
-        <span class="glyphicon glyphicon-menu-hamburger"></span>
-      </a>
-      <a routerLink=".">
-        <span class="glyphicon glyphicon-cog"></span>
-      </a>
-    </div>
-    <p></p>
-  </div>
+  <!--<div>-->
+    <!--<div class="pull-right">-->
+      <!--<a routerLink="." class="pull-right">-->
+        <!--<span class="glyphicon glyphicon-menu-hamburger"></span>-->
+      <!--</a>-->
+      <!--<a routerLink=".">-->
+        <!--<span class="glyphicon glyphicon-cog"></span>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<p></p>-->
+  <!--</div>-->
 
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
