--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -34,8 +34,8 @@
     <ul class="list-group cl-list-group-borderless">
       <li *ngFor="let website of websites" class="list-group-item cl-list-item-borderless">
         <a routerLink="/user/{{uid}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right"></span></a>
-        <a routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}}</a>
-      </li>i
+        <a routerLink="/user/{{uid}}/website/{{website._id}}/page">{{website.name}}</a>
+      </li>
     </ul>
   </div>
   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 borders">
