--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -2,18 +2,18 @@
   <div class="container-fluid row">
 
     <div class="navbar-text pull-left">
-      <a routerLink="user/:userId/website/:wid/page/:pid/widget" class="cl-text-black cl-icon-padding">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a routerLink="user/:userId/website/:wid/page/:pid/widget" class="cl-icon-padding cl-text-black">
+      <a routerLink=".." (click)="updateWidget(widget)" class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-ok">
           </span>
       </a>
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" href="#">
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
       Widgets Edit
     </a>
   </div>
@@ -23,25 +23,25 @@
   <form>
     <div class="form-group">
       <label for="heading-name">Name</label>
-      <input type="text" class="form-control" id="heading-name" placeholder="Name">
+      <input type="text" class="form-control" name="name" id="heading-name" placeholder="Name">
     </div>
     <div class="form-group">
       <label for="heading-text">Text</label>
-      <input type="text" class="form-control" id="heading-text" placeholder="Text">
-    </div>
+      <input [(ngModel)]="widget.text" type="text" class="form-control" name="heading-text" id="heading-text" placeholder="Text">
+</div>
     <div class="form-group">
       <label for="heading-size">Size</label>
-      <input type="text" class="form-control" id="heading-size" placeholder="3">
+      <input [(ngModel)]="widget.size" type="text" class="form-control" name="heading-size" id="heading-size" placeholder="3">
     </div>
   </form>
-  <a class="btn btn-danger  btn-block" routerLink="user/:userId/website/:wid/page/:pid/widget">Delete</a>
+  <a class="btn btn-danger  btn-block" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" (click)="deleteWidget()">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user:userId" class="cl-icon-padding">
+      <a routerLink="/user/{{uid}}" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
