--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -2,18 +2,18 @@
   <div class="container-fluid row">
 
     <div class="navbar-text pull-left">
-      <a routerLink="user/:userId/website/:wid/page/:pid/widget" class="cl-text-black cl-icon-padding">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a routerLink="user/:userId/website/:wid/page/:pid/widget" class="cl-icon-padding cl-text-black">
+      <a routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget" class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-ok">
           </span>
       </a>
     </div>
-    <a class="navbar-brand cl-text-white cl-text-bold" href="#">
+    <a class="navbar-brand cl-text-white cl-text-bold" routerLink=".">
       Widgets Edit
     </a>
   </div>
@@ -31,11 +31,11 @@
     </div>
     <div class="form-group">
       <label for="image-URL">URL</label>
-      <input type="text" class="form-control" id="image-URL" placeholder="URL">
+      <input [(ngModel)]="widget.url" type="text" class="form-control" id="image-URL" placeholder="URL"[ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="image-width">Width</label>
-      <input type="text" class="form-control" id="image-width" placeholder="100%">
+      <input [(ngModel)]="widget.width" type="text" class="form-control" id="image-width" placeholder="100%" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="exampleInputFile">Upload</label>
@@ -43,14 +43,14 @@
     </div>
   </form>
   <a class="btn btn-primary btn-block" routerLink=".">Upload Image</a>
-  <a class="btn btn-danger  btn-block" routerLink="user/:userId/website/:wid/page/:pid/widget">Delete</a>
+  <a class="btn btn-danger  btn-block" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid row">
     <div class="pull-right navbar-text">
 
-      <a routerLink="/user:userId" class="cl-icon-padding">
+      <a routerLink="/user/{{uid}}" class="cl-icon-padding">
         <span class="glyphicon glyphicon-user"></span>
       </a>
 
