--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -29,17 +29,25 @@
     {{infoMsg}}
   </div>
   <form>
+    <div class="form-group">
     <label for="username">Username</label>
     <input [(ngModel)]="user.username" type="text" class="form-control" id="username" placeholder="username" [ngModelOptions]="{standalone: true}">
+    </div>
 
+    <div class="form-group">
     <label for="password">Password</label>
     <input [(ngModel)]="user.password" type="password" class="form-control" id="password" placeholder="password" [ngModelOptions]="{standalone: true}">
+    </div>
 
+    <div class="form-group">
     <label for="firstname">First Name</label>
     <input [(ngModel)]="user.firstName" type="text" class="form-control" id="firstname" placeholder="first name" [ngModelOptions]="{standalone: true}">
+    </div>
 
+    <div class="form-group">
     <label for="lastname">Last Name</label>
     <input [(ngModel)]="user.lastName" type="text" class="form-control" id="lastname" placeholder="last name" [ngModelOptions]="{standalone: true}">
+    </div>
   </form>
 
   <a class="btn btn-primary btn-block"
