fixed all bugs in assignment3

--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -2,13 +2,13 @@
   <div class="container-fluid row">
 
     <div class="navbar-text pull-left">
-      <a routerLink="/user/{{uid}}/website/{{wid}}/page" class="cl-text-black cl-icon-padding">
+      <a routerLink=".." class="cl-text-black cl-icon-padding">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a (click)="updatePage(updatedPage)" class="cl-icon-padding cl-text-black">
+      <a (click)="updatePage()" routerLink=".." class="cl-icon-padding cl-text-black">
           <span class="glyphicon glyphicon-ok">
           </span>
       </a>
@@ -23,14 +23,14 @@
   <form>
     <div class="form-group">
       <label for="page-name">Name</label>
-      <input [(ngModel)]="page-name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
+      <input [(ngModel)]="page.name" type="text" class="form-control" id="page-name" placeholder="Page Name" [ngModelOptions]="{standalone: true}">
     </div>
     <div class="form-group">
       <label for="page-title">Title</label>
-      <input [(ngModel)]="page-title" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
+      <input [(ngModel)]="page.description" type="text" class="form-control" id="page-title" placeholder="Page Title" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
-  <a class="btn btn-danger  btn-block" (click)="deletePage()" routerLink="/user/{{uid}}">Delete</a>
+  <a class="btn btn-danger  btn-block" (click)="deletePage()" routerLink="..">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
