--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -43,7 +43,7 @@
     </div>
   </form>
   <a class="btn btn-primary btn-block" routerLink=".">Upload Image</a>
-  <a class="btn btn-danger  btn-block" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget">Delete</a>
+  <a (click)="deleteWidget()" class="btn btn-danger  btn-block" routerLink="/user/{{uid}}/website/{{wid}}/page/{{pid}}/widget">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
