--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -49,7 +49,7 @@
       <input [(ngModel)]="widget.width" type="text" class="form-control" id="youtube-width" placeholder="100%" [ngModelOptions]="{standalone: true}">
     </div>
   </form>
-  <a class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</a>
+  <a class="btn btn-danger btn-block" routerLink=".." (click)="deleteWidget()">Delete</a>
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
